Added /user/me route, improved middlewares
